--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,60 +1,3 @@
-/*  Dark mode classes  */
-.darkMode-back {
-    background-color: #37383C;
-}
-.darkMode-font {
-    color: #ffff;
-}
-.darkMode-backTwo {
-    background-color: #222326;
-}
-.darkMode {
-    background-color: black;
-    width: 100%;
-    height: 5px;
-}
-.barDark {
-    margin: 2px;
-    height: 2px;
-    width: 19px;
-    background-color: #ffff;
-    border-radius: 5px;
-}
-.navDark {
-    padding-right: 50px;
-    transition: 0s;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    height: 70px;
-    .names {
-        margin: 20px 50px 0px 0px;
-        a {
-            color: #fff;
-            font-size: 0.81rem;
-        }
-        a:hover {
-            border-bottom: 2px solid #5ED7C6;
-            transition: 0.2s;
-        }
-    }
-    span {
-        display: none;
-    }
-    .create {
-        display: inline-block;
-        width: 3.375rem;
-        height: 3.375rem;
-    }
-    .create:hover {
-        cursor: pointer;
-        transition: 0.2s;
-        transform: rotate(360deg);
-        border-radius: 40px;
-        box-shadow: 0px 0px 5px rgba(156,175,195,0.55);
-    }
-    }
 html {
     font-size: 16px;
     letter-spacing: 0;
